--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hisao's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <div id="content" style="font-family:Trebuchet MS, Helvetica, sans-serif">
-      <!--Header & Basics-->>
-      <div id="info">
-        <h1>My Portfolio</h1>
-        <h1>Jaime Hisao Yesaki Hinojosa</h1>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Hisao's Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+</head>
+
+<body>
+  <div id="content">
+    <!--Header & Basics-->
+    <div id="info">
+      <h1>My Portfolio</h1>
+      <h1>Jaime Hisao Yesaki Hinojosa</h1>
+    </div>
+    <!--Image of Myself-->
+    <div class="imgwrapper">
+      <div class="imgcontainer" id="myimage">
+        <a href="https://www.instagram.com/jaimehisao" target="_blank"><img class="imglink" src="/images/hisao2.jpg"
+            alt="Hisao and Ely" width="300" height="400"></img></a>
       </div>
-      <!--Image of Myself-->
-      <div class="imgwrapper">
-        <div class="imgcontainer" id="myimage">
-          <a href="https://www.instagram.com/jaimehisao" target="_blank"><img class="imglink"
-              src="/images/hisao2.jpg"
-              alt="Hisao and Ely" width="300" height="400"></img></a>
-        </div>
       <!--Dev Social Media Icons & Links-->
-      <div id="socialmedia">
-        <div class="imgwrapper">
+      <div class="row">
+        <div class="column">
+        </div>
+        <div class="imgwrapper" id="git">
           <div class="imgcontainer">
-            <a href="https://www.github.com/jaimehisao" target="_blank"><img class="imglink"
-              src="/images/octocat.svg"
-              alt="El Logo de Github" width="40" height="90"></img></a>
-          </div>
-        <div class="imgcontainer">
-          <a href="https://mx.linkedin.com/in/jaime-hisao-yesaki-750a02155" target="_blank"><img class="imglink"
-              src="/images/lin.png"
-              alt="Logo de LinkedIn" width="50" height="50"></img></a>
+            <a href="https://www.github.com/jaimehisao" target="_blank"><img class="imglink" src="/images/octocat.svg"
+                alt="El Logo de Github" width="40" height="70"></img></a>
           </div>
         </div>
+        <!--
+        <div class="column">
+          <div class="imgcontainer">
+            <a href="https://mx.linkedin.com/in/jaime-hisao-yesaki-750a02155" target="_blank"><img class="imglink"
+                src="/images/lin.png" alt="Logo de LinkedIn" width="60" height="60"></img></a>
+          </div>
+        </div>
+        -->
       </div>
-      <div id="txt">
+    </div>
+    <div id="txt">
       <h2>About me: </h2>
       <p>
-        I'm a rising sophomore at Tec de Monterrey in Mexico. 
-        I am passionate about servers, databases, DevOps and always 
-        learning new stuff and being on the cutting edge of technology. 
+        I'm a rising CS sophomore at Tec de Monterrey in Mexico.
+        I am passionate about servers, databases, DevOps and always
+        learning new stuff and being on the cutting edge of technology.
       </p>
       <!--Resume/Experience-->
       <h2>Work Experience</h2>
@@ -48,14 +54,16 @@
         <li>FIRST Robotics Mentor at PrepaTec (November 2019 - Present) </li>
         <li>IT Intern at Sigma Alimentos (Winter 2018)</li>
         <li>IT Intern at Sigma Alimentos (Summer 2018)</li>
-      </ul>     
+      </ul>
       <h2>Projects I've worked on:</h2>
       <ul>
-      <li>Treeler, Visual recognition for tree planting, with a social media twist!</li> Treeler, Visual recognition for tree planting, with a social media twist! <br>
-      <li>CaneAssist, AI assisted smart cane with voice assistant. (HackMIT 2019) </li>
-        <li>EXO-AID, extra set of mechanical arms controllable from anywhere in the world (HackMTY 2019) </li> 
-          <li>DLC (Dynamic Logic Controller), Videogame controller addon for VR that simulates the weight and feel of objects in game. (HackMTY 2018) </li>
-            <li>Braillearn, a tool to bring braile alphabet to the masses. (HackPrepas 2017) </li>
+        <li>Treeler, Visual recognition for tree planting, with a social media twist!</li> Treeler, Visual recognition
+        for tree planting, with a social media twist! <br>
+        <li>CaneAssist, AI assisted smart cane with voice assistant. (HackMIT 2019) </li>
+        <li>EXO-AID, extra set of mechanical arms controllable from anywhere in the world (HackMTY 2019) </li>
+        <li>DLC (Dynamic Logic Controller), Videogame controller addon for VR that simulates the weight and feel of
+          objects in game. (HackMTY 2018) </li>
+        <li>Braillearn, a tool to bring braile alphabet to the masses. (HackPrepas 2017) </li>
       </ul>
       <h2>Awards:</h2>
       <ul>
@@ -66,14 +74,15 @@
         <li>2nd place at WER Robotics Competition, 2017</li>
         <li>1st Place on HackPrepas 2017 (HighSchool Hackathon), Braillearn</li>
       </ul>
-      <br> 
-      </div>
-      <!--The BUTTON--->
-    <div id="clickBttn"> 
+      <br>
+    </div>
+    <!--The BUTTON--->
+    <div id="clickBttn">
       <p>Click here to get a random fact about me!:</p>
       <button onclick="addRandomFact()">Click!</button>
     </div>
-      <div id="fact-container"></div>
-    </div>
-  </body>
+    <div id="fact-container"></div>
+  </div>
+</body>
+
 </html>
