Updated HTML for testing

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -28,7 +28,7 @@
         <div class="imgwrapper" id="git">
           <div class="imgcontainer">
             <a href="https://www.github.com/jaimehisao" target="_blank"><img class="imglink" src="/images/octocat.svg"
-                alt="El Logo de Github" width="40" height="70"></img></a>
+                alt="El Logo de Github." width="40" height="70"></img></a>
           </div>
         </div>
         <!--
