Removed duplicate text

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -57,8 +57,7 @@
       </ul>
       <h2>Projects I've worked on:</h2>
       <ul>
-        <li>Treeler, Visual recognition for tree planting, with a social media twist!</li> Treeler, Visual recognition
-        for tree planting, with a social media twist! <br>
+        <li>Treeler, Visual recognition for tree planting, with a social media twist!</li>
         <li>CaneAssist, AI assisted smart cane with voice assistant. (HackMIT 2019) </li>
         <li>EXO-AID, extra set of mechanical arms controllable from anywhere in the world (HackMTY 2019) </li>
         <li>DLC (Dynamic Logic Controller), Videogame controller addon for VR that simulates the weight and feel of
