Using JS and Serverlets to greet the user (me)

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -73,6 +73,12 @@
       <button onclick="addRandomFact()">Click!</button>
     </div>
     <div id="fact-container"></div>
+    <!--Greetings-->
+    <div id="clickBttn">
+      <p>Click here for a greeting!:</p>
+      <button onclick="getName()">Click!</button>
+    </div>
+    <div id="name-container"></div>
   </div>
 </body>
 
