--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -73,7 +73,7 @@
       <button onclick="addRandomFact()">Click!</button>
     </div>
     <div id="fact-container"></div>
-    <!--Greetings-->
+    <!--Greetings Container/Button-->
     <div id="clickBttn">
       <p>Click here for a greeting!:</p>
       <button onclick="getName()">Click!</button>
