Removed blue background

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,7 +8,8 @@
   <script src="script.js"></script>
 </head>
 
-<body style="background-color:#9deaff;">
+<body>
+  <!--<body style="background-color:#9deaff;">--->
   <div id="content">
     <!--Header & Basics-->
     <div id="info">
