Removed extra HTML

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,15 +18,13 @@
   </div>
 
     <div id="clickBttn">
-      <p>Click here for a greeting!:</p>
       <button onclick="greetingMaker()">Click here for a greeting!</button>
     </div>
     <div id="greeting-container"></div>
 
     <!--Greeting BUTTON--->
     <div id="clickBttn">
-      <p>Click here to get a random fact about me!:</p>
-      <button id=greetingButton onclick="randomFact()">Click Here for a random fact!</button>
+      <button id=greetingButton onclick="randomFact()">Click Here for a random fact about me!</button>
     </div>
     <div id="fact-container"></div>
 
