--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Hisao's Portfolio</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
 </head>
 
-<body>
+<body onload="addComments()">
   <!--<body style="background-color:#9deaff;">--->
   <div id="content">
     <!--Header & Basics-->
@@ -18,13 +20,13 @@
   </div>
 
     <div id="clickBttn">
-      <button onclick="greetingMaker()">Click here for a greeting!</button>
+      <button type="submit" class="btn btn-primary mb-2" onclick="greetingMaker()">Click here for a greeting!</button>
     </div>
     <div id="greeting-container"></div>
 
     <!--Greeting BUTTON--->
     <div id="clickBttn">
-      <button id=greetingButton onclick="randomFact()">Click Here for a random fact about me!</button>
+      <button id=greetingButton class="btn btn-primary mb-2" onclick="randomFact()">Click Here for a random fact about me!</button>
     </div>
     <div id="fact-container"></div>
 
@@ -91,6 +93,31 @@
     <div>
       <h2>Comments Section</h2>
       <p>Feel free to leave a comment here!</p>
+
+
+
+      <form id="comment-submit-form-group" action="/comments" method="POST">
+        <div class="form-group">
+          <label for="commentNameArea">Name</label>
+          <input type="text" class="form-control" name="name" placeholder="Sundar" required>
+        </div>
+        <div class="form-group">
+          <label for="commentTextArea">Comment</label>
+          <textarea class="form-control" name="comment" rows="2" placeholder="Very funny comment goes here..." required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary mb-2" >Submit Comment</button>
+        <button type="reset" class="btn btn-primary mb-2" >Reset Form</button>
+      </form>
+
+
+
+      <div id="comments-container">
+        <div id="comment-card">
+
+        </div>
+      </div>
+
+
 
     </div>
   </div>
