--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,11 +6,12 @@
   <title>Hisao's Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIO5KbhRZdxWOiE6xkqMa4Jv0OawPt_l0"></script>
   <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
 </head>
 
-<body onload="addComments()">
+<body onload="addComments(); createMap();">
   <!--<body style="background-color:#9deaff;">--->
   <div id="content">
     <!--Header & Basics-->
@@ -87,6 +88,8 @@
       </ul>
       <br>
     </div>
+
+    <div id="map"></div>
     
     <!--Comments Section-->
     <div>
