Added CSV Markers and CSV reading capabilities

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,6 +9,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIO5KbhRZdxWOiE6xkqMa4Jv0OawPt_l0"></script>
   <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 
 <body onload="addComments(); createMap();">
