Changed translate language to Czech

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -95,7 +95,7 @@
     <!--Comments Section-->
     <div>
       <h2>Comments Section</h2>
-      <p>Feel free to leave a comment here!</p>
+      <p>Feel free to leave a comment here! They are all automatically translated to Czech!</p>
 
       <form id="comment-submit-form-group" action="/comments" method="POST">
         <div class="form-group">
