Changed comment layout and added picture

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -39,14 +39,7 @@
   <div id="content">
   
     <div id="content-text">
-      <h2>About me: </h2>
-      <p>
-        Welcome! I'm a rising CS sophomore at Tec de Monterrey in Mexico.
-        I am passionate about servers, databases, DevOps and always
-        learning new stuff and being on the cutting edge of technology. Besides CS I like airplanes, 
-        trying out new foods, new trails and meeting new people. Right now I am very excited about my internship
-        at Google and seeing what I can acomplish.
-      </p>
+      <br>
       <!--Resume/Experience-->
       <h2>Work Experience</h2>
       <ul>
@@ -85,9 +78,9 @@
       <button id=greetingButton class="btn btn-primary mb-2" onclick="randomFact()">Click Here for a random fact about me!</button>
     </div>
     <div id="fact-container"></div>
-    
+    <br>
     <!--Comments Section-->
-    <div>
+    <div id="comments-sect">
       <h2>Comments Section</h2>
       <p>Feel free to leave a comment here!</p>
 
@@ -103,11 +96,11 @@
         <button type="submit" class="btn btn-primary mb-2" >Submit Comment</button>
         <button type="reset" class="btn btn-primary mb-2" >Reset Form</button>
       </form>
-
+      <br>
       <div id="comments-container" class="card">
-        <ul class="list-group list-group-flush" id="card-cont">
+        <div id="comment-card">
 
-        </ul>
+        </div>
       </div>
 
     </div>
