Fixed broken link

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -23,7 +23,7 @@
         at Google and seeing what I can acomplish.
       </p>
      <div class="social" id="networks">
-      <a href="https://www.instagram.com/jamehisao/" class="link">
+      <a href="https://www.instagram.com/jaimehisao/" class="link">
         <i class="fab fa-instagram" alt="Instagram" style='font-size:48px;color:black'></i>
       </a>
       <a href="https://github.com/jaimehisao" class="link">
